# CounselReflect

./: .gitignore  .gitmodules  Makefile  README.md  package-lock.json  package.json  setup.bat  setup.sh
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  prefetch_models.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py
api/customizePipeline/: __init__.py  definitions.py  example_store.py  examples.py  llm_client.py  metrics_service.py  models.py  prompts.py  routes.py
api/evaluators/: README.md  __init__.py  base.py  registry.py  routes.py
api/evaluators/impl/: __init__.py  emotion_evaluator.py  emotional_support_strategy_evaluator.py  empathy_er_evaluator.py  empathy_ex_evaluator.py  empathy_ip_evaluator.py  fact_evaluator.py  medscore_evaluator.py  pair_evaluator.py  perspective_evaluator.py  reccon_evaluator.py  talk_type_evaluator.py  toxicity_evaluator.py
api/literature/: convert_csv_to_rubrics.py  evaluator.py  literature_rubrics.json  routes.py
api/models/: README.md  routes.py
api/providers/: README.md  __init__.py  base.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  registry.py
api/summary/: __init__.py  routes.py
api/tests/: __init__.py  create_medscore_test.py  long_conversation_test.json  test_api.sh  test_evaluate.py  test_health.py  test_input.json  test_integration_providers.py  test_models.py  test_parser.py  test_providers.py  toxicity_test.json
api/tests/fact_score/: high_fact_score_test.json  low_fact_score_test.json
api/utils/: __init__.py  conversation_parser.py  evaluation_helpers.py
cli/: .env.example  (+9 more)
(+233 files in other folders)
